Add documentation and code refinement across classes
Enhanced readability and refined multiple classes in the Action, Triggers, and Views. Detailed class usage documentation was provided for each class. Changes were also made to refine the code like removing unnecessary else statement after a return, converting switch statements to switch expressions, and removing superfluous access modifiers on interface methods. Some classes were made final, enhancing thread safety. Further, some test code blocks were simplified for readability.